@@ -1,3 +1,6 @@
+2007-10-27  Paf <paf@tuxfamily.org>
+	* src/core/include/cgraphicmodule.cpp: Upgrade to Ogre 1.4
+
 2007-12-19  Gabriel <countag@wanadoo.fr>
 	* src/core/include/camerathirperson.h: add map for the key listener, add time for the transformation and add limit rotation
 	* src/core/include/camerathirperson.cpp: add map for the key listener, add time for the transformation and add limit rotation
